--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     left: 0;
     width: 50px; /* 이미지의 너비 */
     height: 50px; /* 이미지의 높이 */
-    background-image: url('images/jh.png'); /* 여기에 준비한 이미지 경로를 입력하세요! */
+    background-image: url('https://raw.githubusercontent.com/AngelaBaek/hbd-2025/main/images/jh.png'); /* 여기에 준비한 이미지 경로를 입력하세요! */
     background-size: contain; /* div 크기에 맞게 이미지 조절 */
     background-repeat: no-repeat;
     pointer-events: none; /* 이 div 위로 마우스가 올라와도 아래의 요소들을 클릭할 수 있도록 */
